--- a/ElectronicStore/ElectronicStore/src/main/resources/application-prod.properties
+++ b/ElectronicStore/ElectronicStore/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 #db configurations
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:viaduct.proxy.rlwy.net}:${MYSQL_PORT:44828}/railway
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:roundhouse.proxy.rlwy.net}:${MYSQL_PORT:59846}/railway
 spring.datasource.username=root
-spring.datasource.password=fgCcdfBed12fahAaDg4cA1C-D-dDAgEc
+spring.datasource.password=GaCd11GA31-3cCbBcghGHe3fDd25e2bA
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #jpa configurations
 spring.jpa.hibernate.ddl-auto=update
